tests/compiletests/ui/lang/core/ptr/allocate_const_scalar.stderr
warning: the feature `ptr_internals` is internal to the compiler or standard library
  --> $DIR/allocate_const_scalar.rs:6:12
   |
LL | #![feature(ptr_internals)]
   |            ^^^^^^^^^^^^^
   |
   = note: using it is strongly discouraged
   = note: `#[warn(internal_features)]` on by default

error: error:0:0 - In Logical addressing, variables may not allocate a pointer type
         %output = OpVariable %_ptr_Output__ptr_Function___ Output
   |
   = note: spirv-val failed
   = note: module `$TEST_BUILD_DIR/lang/core/ptr/allocate_const_scalar.vulkan1.1`

error: aborting due to 1 previous error; 1 warning emitted

